--- a/.env.dist
+++ b/.env.dist
@@ -1,7 +1,7 @@
 # (!) Fill the file with required data and rename it on `.env`
 
 SECRET_KEY=leave_it_or_create_yours
-IP=127.0.0.1
+IP=127.0.0.1 #ELASTIC IP
 
 DATABASE_NAME=
 DATABASE_USER=
